pyNPR.py: Correct populate_kinematic_variables; Begin IW_SUSY_analysis.py

--- a/README
+++ b/README
@@ -27,3 +27,7 @@ IW_analysis.py -
 combined_analysis.py -
     DSDR Zs + IW step-scaling + NDR matching.
 
+---- Jan 10, 2012 ----
+
+IW_SUSY_analysis.py -
+    5x5 Delta S=2 analysis for SUSY B_K project.
